--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -15,6 +15,7 @@
             <mat-icon matSuffix>mail_outline</mat-icon>
             <mat-error *ngIf="form.controls['email'].hasError('email')">Email jest nieprawidłowy.</mat-error>
             <mat-error *ngIf="form.controls['email'].hasError('pattern')">Nieprawidłowo wpisany adres email.</mat-error>
+            <mat-error *ngIf="form.controls['email'].hasError('duplicate')">Ten email jest już używany.</mat-error>
           </mat-form-field>
 
           <mat-form-field appearance="outline" fxFlex="50">
@@ -32,7 +33,7 @@
         <div class="col-12" fxLayoutGap="20">
           <mat-form-field appearance="outline" fxFlex="50">
             <mat-label>Imię:</mat-label>
-            <input matInput type="text" placeholder="Twoje hasło" formControlName="name" />
+            <input matInput type="text" placeholder="Imię" formControlName="name" />
             <mat-icon matSuffix>perm_contact_calendar</mat-icon>
             <mat-error *ngIf="form.controls['name'].hasError('required')">Imię jest wymagane.</mat-error>
             <mat-error *ngIf="form.controls['name'].hasError('minlength')">Za krótkie imię (minimum 3 znaki)</mat-error>
