--- a/src/app/components/admin/payments/payments.component.html
+++ b/src/app/components/admin/payments/payments.component.html
@@ -69,6 +69,12 @@
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell text-center" [attr.colspan]="displayedColumns.length">
+              Nie zostały jeszcze opublikowane żadne płatności
+            </td>
+          </tr>
+
 
         </table>
 
