--- a/src/app/components/admin/raports/raports.component.html
+++ b/src/app/components/admin/raports/raports.component.html
@@ -27,7 +27,7 @@
         <ng-container matColumnDef="apartment">
           <th mat-header-cell *matHeaderCellDef> Lokal</th>
           <td mat-cell *matCellDef="let element"> {{element.apartment.street}}
-            {{element.apartment.buildingnumber}}/{{element.apartment.apartmentnumber}}</td>
+            <span *ngIf="element.apartment.buildingnumber">{{element.apartment.buildingnumber}}/</span>{{element.apartment.apartmentnumber}}</td>
         </ng-container>
 
         <ng-container matColumnDef="createdAt">
@@ -63,6 +63,12 @@
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell text-center" [attr.colspan]="displayedColumns.length">
+            Nie zostały jeszcze opublikowane żadne raporty
+          </td>
+        </tr>
+
 
       </table>
 
