--- a/src/app/components/admin/users/users-add/users-add.component.html
+++ b/src/app/components/admin/users/users-add/users-add.component.html
@@ -86,8 +86,8 @@
         </div>
 
         <div class="col ">
-          <app-input title="Telefon Kontaktowy" [control]="phone" [minLength]=11 [maxLength]=11 [dropSpecial]=false
-            format="000-000-000||000-00-00"></app-input>
+          <app-input title="Telefon Kontaktowy" [minLength]=11 [maxLength]=11 [control]="phone" [dropSpecial]=false
+              format="000-000-000||000-00-00"></app-input>
         </div>
 
       </div>
