--- a/src/app/components/admin/users/users.component.html
+++ b/src/app/components/admin/users/users.component.html
@@ -41,7 +41,7 @@
 
           <ng-container matColumnDef="postcode">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Kod Pocztowy </th>
-            <td mat-cell *matCellDef="let element"> {{element.postcode}}</td>
+            <td mat-cell *matCellDef="let element"> {{element.postcode | mask: '00-000'}}</td>
           </ng-container>
 
           <ng-container matColumnDef="city">
@@ -101,6 +101,12 @@
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell text-center" [attr.colspan]="displayedColumns.length">
+              Nie ma zarejestrowanych użytkowników
+            </td>
+          </tr>
+
 
         </table>
 
