--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,6 @@
 <div *ngIf="authService.isLoggedIn">
   <div class="container my-4">
-
-    <div *ngIf="authService.userInfo | async as user">
+    <div *ngIf="authService.userInfo | async as user, ">
       <div class="row m-2" *ngIf="!user.moderator">
         <div fxLayout="row" fxFlex fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="30">
           <div *ngIf="lastburden | async" fxLayout="row" fxFlex class="dashboard-panel col">
@@ -50,7 +49,7 @@
               <tbody>
                 <tr *ngFor="let x of premises | async; let i = index">
                   <th scope="row">{{ i + 1 }}</th>
-                  <td>{{x.street | uppercase}} {{x.apartmentnumber}}/{{x.buildingnumber}}</td>
+                  <td>{{x.street | uppercase}} {{x.apartmentnumber}} <span *ngIf="x.buildingnumber.length > 0">/{{x.buildingnumber}}</span></td>
                   <td>{{x.area}} m2</td>
                   <td>{{getPrice(x.area, x.rate)}} zł</td>
                 </tr>
