--- a/src/app/components/admin/payments/payments.component.html
+++ b/src/app/components/admin/payments/payments.component.html
@@ -71,7 +71,8 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           <tr class="mat-row" *matNoDataRow>
             <td class="mat-cell text-center" [attr.colspan]="displayedColumns.length">
-              Nie zostały jeszcze opublikowane żadne płatności
+              <span *ngIf="box.value.length > 0 else NODATA">Nie odnaleziono danych</span>
+              <ng-template #NODATA>zostały jeszcze opublikowane żadne rozliczenia</ng-template> 
             </td>
           </tr>
 
