--- a/src/app/components/admin/premises/premises.component.html
+++ b/src/app/components/admin/premises/premises.component.html
@@ -16,14 +16,14 @@
       <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort>
   
-          <ng-container matColumnDef="ownername">
+          <ng-container matColumnDef="owner.name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Imię </th>
-            <td mat-cell *matCellDef="let element"> {{element.nameuser}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.owner.name}} </td>
           </ng-container>
           
-          <ng-container matColumnDef="ownerlastname">
+          <ng-container matColumnDef="owner.lastname">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Nazwisko </th>
-            <td mat-cell *matCellDef="let element"> {{element.lastnameuser}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.owner.lastname}} </td>
           </ng-container>
           
           <ng-container matColumnDef="street">
@@ -79,7 +79,8 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           <tr class="mat-row" *matNoDataRow>
             <td class="mat-cell text-center" [attr.colspan]="displayedColumns.length">
-              Nie zostały jeszcze opublikowane żadne lokale
+              <span *ngIf="box.value.length > 0 else NODATA">Nie odnaleziono danych</span>
+              <ng-template #NODATA>zostały jeszcze opublikowane żadne rozliczenia</ng-template> 
             </td>
           </tr>
 
