--- a/src/app/components/admin/raports/raports.component.html
+++ b/src/app/components/admin/raports/raports.component.html
@@ -19,19 +19,25 @@
           <td mat-cell *matCellDef="let element">#{{element.number}}</td>
         </ng-container>
 
-        <ng-container matColumnDef="owner">
-          <th mat-header-cell *matHeaderCellDef> Użytkownik</th>
-          <td mat-cell *matCellDef="let element">{{element.fullname}}</td>
+        <ng-container matColumnDef="user.name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Imię</th>
+          <td mat-cell *matCellDef="let element">{{element.user.name}}</td>
         </ng-container>
 
-        <ng-container matColumnDef="apartment">
-          <th mat-header-cell *matHeaderCellDef > Lokal</th>
+      <ng-container matColumnDef="user.lastname">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Nazwisko</th>
+          <td mat-cell *matCellDef="let element">{{element.user.lastname}}</td>
+        </ng-container>
+        
+
+        <ng-container matColumnDef="apartment.street">
+          <th mat-header-cell *matHeaderCellDef> Lokal</th>
           <td mat-cell *matCellDef="let element"> {{element.apartment.street}}
             <span *ngIf="element.apartment.buildingnumber">{{element.apartment.buildingnumber}}/</span>{{element.apartment.apartmentnumber}}</td>
         </ng-container>
 
         <ng-container matColumnDef="createdAt">
-          <th mat-header-cell *matHeaderCellDef> Data dokumentu</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Data dokumentu</th>
           <td mat-cell *matCellDef="let element">{{element.createdAt.toDate() | date: 'dd/MM/yyyy'}}</td>
         </ng-container>
 
@@ -65,7 +71,8 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         <tr class="mat-row" *matNoDataRow>
           <td class="mat-cell text-center" [attr.colspan]="displayedColumns.length">
-            Nie zostały jeszcze opublikowane żadne raporty
+            <span *ngIf="box.value.length > 0 else NODATA">Nie odnaleziono danych</span>
+            <ng-template #NODATA>zostały jeszcze opublikowane żadne rozliczenia</ng-template> 
           </td>
         </tr>
 
