--- a/src/app/components/user/user-raports/user-raports.component.html
+++ b/src/app/components/user/user-raports/user-raports.component.html
@@ -14,14 +14,19 @@
       <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort>
 
-          <ng-container matColumnDef="position">
+          <ng-container matColumnDef="number">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Numer Rozliczenia </th>
             <td mat-cell *matCellDef="let element">#{{element.number}}</td>
           </ng-container>
 
-          <ng-container matColumnDef="fullname">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Wystawione na </th>
-            <td mat-cell *matCellDef="let element"> {{element.user.name}} {{element.user.lastname}}</td>
+          <ng-container matColumnDef="user.name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Imię </th>
+            <td mat-cell *matCellDef="let element"> {{element.user.name}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="user.lastname">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nazwisko </th>
+            <td mat-cell *matCellDef="let element"> {{element.user.lastname}}</td>
           </ng-container>
 
           <ng-container matColumnDef="createdAt">
@@ -48,7 +53,8 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           <tr class="mat-row" *matNoDataRow>
             <td class="mat-cell text-center" [attr.colspan]="displayedColumns.length">
-              Nie zostały jeszcze opublikowane żadne rozliczenia
+              <span *ngIf="box.value.length > 0 else NODATA">Nie odnaleziono danych</span>
+              <ng-template #NODATA>zostały jeszcze opublikowane żadne rozliczenia</ng-template> 
             </td>
           </tr>
 
